updated palette and focus for fixes against colour contrast in footer

--- a/app/assets/stylesheets/partials/_palette.scss
+++ b/app/assets/stylesheets/partials/_palette.scss
@@ -1,10 +1,3 @@
-// =========================
-// updated 11 June 2020 13:46 BST
-// Palette change
-// https://designnotes.blog.gov.uk/2019/07/29/weve-updated-the-gov-uk-colours-and-font/
-// to check for updates visit https://gist.github.com/adamliptrot-oc/f77250a6f69fb31fabd935e2002f4964
-// =========================
-
 // #DEE0E2 to #f3f2f1
 .button--secondary,
 .button--secondary:visited,
@@ -269,4 +262,9 @@ input.form-control-error[type="password"],
 // confirmation panel
 .govuk-box-highlight {
   background-color: #00703c;
+}
+
+// faded text in banner (eg lang toggle)
+.header__menu__proposition-links .faded-text--small {
+  color: #A7A7A7
 }
